add: new teacher functionality

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
   <ul>
     <li *ngIf="this.role === '2'"><a (click)="this.code=true; this.attendance=false; this.teachers=false"><i class="fas fa-ellipsis-h"></i><br>Generate code</a></li>
     <li *ngIf="this.role === '2'"><a (click)="this.attendance=true; this.code=false; this.teachers=false"><i class="fas fa-ellipsis-h"></i><br>Attendance</a></li>
-    <li *ngIf="this.role === '2'"><a (click)="this.teachers=true; this.code=false; this.attendance=false"><i class="fas fa-ellipsis-h"></i><br>Teachers Overview</a></li>
+    <li *ngIf="this.role === '2'"><a (click)="this.teacher=true; this.code=false; this.attendance=false"><i class="fas fa-ellipsis-h"></i><br>New teacher</a></li>
     <li *ngIf="this.role === '2'"><a (click)="studentsOverview()"><i class="fas fa-ellipsis-h"></i><br>Students Overview</a></li>
 
     <li *ngIf="this.role === '1'"><a (click)="this.register=true"><i class="fas fa-map-pin"></i><br>Register as present</a></li>
@@ -12,7 +12,7 @@
   <app-code *ngIf="this.code"></app-code>
   <app-attendance *ngIf="this.attendance"></app-attendance>
   <app-register-present *ngIf="this.register"></app-register-present>
-  <app-teachers *ngIf="this.teachers"></app-teachers>
+  <app-teacher *ngIf="this.teacher"></app-teacher>
 
 </div>
 
